# openhpi

./: BigBuild  BigBuild.infra  ChangeLog  Makefile  Makefile.am  Makefile.mingw32  Makefile.mingw32.def  README  README.daemon  README.python  README.windows  README_DAEMON  TODO  acinclude.m4  aclocal.m4  bootstrap  config.h  config.status  configure  configure.ac  configure.in  cscope.out  libtool  nukem.sh  openhpi.conf.example  openhpi.pc  openhpi.pc.in  openhpi.spec.in  openhpiclient.conf.example  rt-env.sh  rt-env.sh.in  simulation.data.example  test_agent.data.example
clients/hpixml/: Makefile.am  Makefile.mingw32  hpi.cpp  hpi.h  hpi_xml_writer.cpp  main.cpp  manifest.rc  schema.h  schema.xsd  version.rc  xml_writer.h
cpp/t/: Makefile.am
docs/hld/: Makefile  Makefile.am  Makefile.in  OpenHPI_HLD.sgml  alternatives.sgml  appendix.sgml  assumptions_and_deps.sgml  authors.dtd  bookinfo.sgml  design_decomposition.sgml  externel_apis.sgml  externel_data_structure.sgml  htmlfilter.pl  internel_components.sgml  internel_data_structure.sgml  introduction.sgml  legal.dtd  methods_and_notations.sgml  obtaining.sgml  openhpi-manual.sgml  openhpi_structure.sgml  plugin_guide.sgml  plugin_usage.sgml  sahpi_breakdown.sgml  snmp_util.sgml
docs/man/: Makefile.am  hpi_shell.1.pod  hpi_shell.pod.1  hpialarms.pod.1  hpidomain.1.pod  hpidomain.pod.1  hpiel.pod.1  hpievents.pod.1  hpifan.pod.1  hpigensimdata.pod.1  hpiinv.1.pod  hpiinv.pod.1  hpionIBMblade.1.pod  hpionIBMblade.pod.1  hpipower.pod.1  hpireset.1.pod  hpireset.pod.1  hpisensor.1.pod  hpisensor.pod.1  hpisettime.pod.1  hpithres.pod.1  hpitop.1.pod  hpitop.pod.1  hpitree.pod.1  hpiwdt.pod.1  hpixml.1.pod  hpixml.pod.1  ohhandler.pod.1  ohparam.1.pod  ohparam.pod.1  openhpi.7.pod  openhpi.pod.7  openhpid.8.pod  openhpid.pod.8
examples/: Makefile  Makefile.am  list_resources  list_resources.c  list_resources_threaded  list_resources_threaded.c  openhpi.conf  openhpi.conf.example  set_resources.c  test_watchdog.c
hpi_shell/: Makefile.am  README.txt  cmdparser.c  commands.c  ctrl_inv.c  dimi.c  fumi.c  hpi_cmd.c  hpi_cmd.h  hpi_ui.h  inputcmd.c  resource.c  sensor.c  service.c  session.c  show.c
include/: Makefile.am  SaHpi.h  SaHpiBladeCenter.h  SaHpiOaSoap.h  epath_utils.h  hash.h  hpi_controls.h  hpi_ctrlrdr.h  hpi_eid.h  hpi_events.h  hpi_events2.h  hpi_hotswap.h  hpi_invrdr.h  hpi_paramctrl.h  hpi_rdr.h  hpi_sel.h  hpi_sensorrdr.h  hpi_status.h  hpi_types.h  hpi_ui.h  hpi_watchdog.h  hpi_watchdogrdr.h  list.h  oHpi.h  oh_alarm.h  oh_config.h  oh_domain.h  oh_error.h  oh_event.h  oh_handler.h  oh_hotswap.h  oh_init.h  oh_lock.h  oh_plugin.h  oh_session.h  oh_threaded.h  openhpi.h  printevent_utils.h  rpt_utils.h  safhpi.h  (+3 more)
include/utils/: hpi_list.h  hpi_primes.h
marshal/: Makefile.am  Makefile.mingw32  connection.c  connection.h  marshal.c  marshal.h  marshal_hpi.c  marshal_hpi.h  marshal_hpi_types.c  marshal_hpi_types.h  strmsock.cpp  strmsock.h  version.rc
marshal/t/: Makefile.am  connection_000.c  float_format.c  marshal_001.c  marshal_003.c  marshal_006.c  marshal_007.c  marshal_008.c  marshal_009.c  marshal_015.c  marshal_016.c  marshal_018.c  marshal_020.c  marshal_022.c  marshal_023.c  marshal_024.c  marshal_025.c  marshal_027.c  marshal_028.c  marshal_029.c  marshal_hpi_types_000.c  marshal_hpi_types_001.c  marshal_hpi_types_003.c  marshal_hpi_types_004.c  marshal_hpi_types_006.c  marshal_hpi_types_007.c  marshal_hpi_types_008.c  marshal_hpi_types_009.c  marshal_hpi_types_010.c  marshal_hpi_types_013.c  marshal_hpi_types_016.c  marshal_hpi_types_017.c  marshal_hpi_types_019.c  marshal_hpi_types_021.c  marshal_hpi_types_022.c  marshal_hpi_types_023.c  marshal_hpi_types_025.c  marshal_hpi_types_026.c  marshal_hpi_types_027.c  marshal_hpi_types_028.c  (+15 more)
openhpi/trunk/: BigBuild  BigBuild.infra  ChangeLog  Makefile.am  Makefile.mingw32  Makefile.mingw32.def  README  README.windows  TODO  acinclude.m4  bootstrap  configure.ac  configure.in  openhpi.conf.example  openhpi.pc.in  openhpi.spec.in  openhpiclient.conf.example  rt-env.sh.in  simulation.data.example  test_agent.data.example
openhpid/: Makefile.am  Makefile.mingw32  README  README_FIRST  alarm.c  answer.c  client.cpp  client_config.h  conf.c  config.c  domain.c  event.c  event_get.c  init.c  lock.c  manifest.rc  marshal.c  oh_client.cpp  oh_client.h  oh_client_conf.c  oh_client_connxs.cpp  oh_client_connxs.h  oh_client_session.cpp  oh_client_session.h  ohpi.c  openhpiclient.c  openhpiclient.conf  openhpiclient.cpp  openhpiclient.h  openhpid-posix.cpp  openhpid-win32.cpp  openhpid.c  openhpid.cpp  openhpid.h  openhpid.service.in  openhpid.sh.in  plugin.c  safhpi.c  server.cpp  server.h  (+5 more)
openhpid/t/: Makefile.am  config_000.c  marshal_019.c  marshal_021.c  marshal_026.c
openhpid2/: Makefile.am  README  client.cpp  client.h  openhpiclient.cpp  openhpiclient.h  openhpid.conf  openhpid.cpp  openhpid.sh  openhpid.sh.in  strmsock.cpp
openhpid2/t/: Makefile.am  ctest_01.cpp
plugins/ov_rest/: Makefile.am  ov_rest.c  ov_rest.h  ov_rest_annunciator.c  ov_rest_callsupport.c  ov_rest_callsupport.h  ov_rest_composer_event.c  ov_rest_composer_event.h  ov_rest_control.c  ov_rest_discover.c  ov_rest_discover.h  ov_rest_event.c  ov_rest_event.h  ov_rest_fan_event.c  ov_rest_fan_event.h  ov_rest_fumi.h  ov_rest_interconnect_event.c  ov_rest_interconnect_event.h  ov_rest_inventory.c  ov_rest_inventory.h  ov_rest_parser_calls.c  ov_rest_parser_calls.h  ov_rest_ps_event.c  ov_rest_re_discover.c  ov_rest_re_discover.h  ov_rest_reset.c  ov_rest_reset.h  ov_rest_resources.c  ov_rest_sensor.h  ov_rest_server_event.c  ov_rest_utils.c  ov_rest_utils.h  ov_rest_watchdog.c
plugins/rtas/: Makefile.am  oh_rtas.h  rtas.c  rtas.h  rtas_annunciator.h  rtas_discover.c  rtas_discover.h  (+13 more)
transport/: Makefile.am  Makefile.mingw32  strmsock.cpp  strmsock.h  version.rc
util/: ChangeLog  Makefile  Makefile.am  README  TODO  hpialarmpanel  hpialarmpanel.c  hpievent.c  hpifan.c  hpifru  hpifru.c  hpiinv.c  hpireset.c  hpisel  hpisel.c  hpisensor.c  hpisettime.c  hpiwdt  hpiwdt.c
(+5719 files in other folders)
